crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__derived-state-from-default-props.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/derived-state-from-default-props.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectDerivationsOfState: You might not need an effect. Derive values in render, not effects.", labels: [LabeledSpan { label: Some("This should be computed during render, not in an effect"), span: SourceSpan { offset: 295, length: 12 }, primary: false }], help: Some("Using an effect triggers an additional render which can hurt performance and user experience, potentially briefly showing stale values to the user\n\nThis setState call is setting a derived value that depends on the following reactive sources:\n\nProps: [input]\n\nData Flow Tree:\n└── input (Prop)\n\nSee: https://react.dev/learn/you-might-not-need-an-effect#updating-state-based-on-props-or-state"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @validateNoDerivedComputationsInEffects_exp @loggerTestOnly @outputMode:"lint"
import { useEffect, useState } from "react";
export default function Component({ input = "empty" }) {
	const [currInput, setCurrInput] = useState(input);
	const localConst = "local const";
	useEffect(() => {
		setCurrInput(input + localConst);
	}, [input, localConst]);
	return <div>{currInput}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ input: "test" }]
};
