crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__derived-state-from-prop-local-state-and-component-scope.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/derived-state-from-prop-local-state-and-component-scope.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "You might not need an effect. Derive values in render, not effects.", labels: [LabeledSpan { label: Some("This should be computed during render, not in an effect"), span: Span { start: 316, end: 327 }, primary: true }], help: Some("Using an effect triggers an additional render which can hurt performance and user experience, potentially briefly showing stale values to the user\n\nThis setState call is setting a derived value that depends on the following reactive sources:\n\nProps: [firstName]\nState: [lastName]\n\nData Flow Tree:\n├── firstName (Prop)\n└── lastName (State)\n\nSee: https://react.dev/learn/you-might-not-need-an-effect#updating-state-based-on-props-or-state"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("EffectDerivationsOfState") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/set-state-in-effect") } }

// @validateNoDerivedComputationsInEffects_exp @loggerTestOnly @outputMode:"lint"
import { useEffect, useState } from "react";
function Component({ firstName }) {
	const [lastName, setLastName] = useState("Doe");
	const [fullName, setFullName] = useState("John");
	const middleName = "D.";
	useEffect(() => {
		setFullName(firstName + " " + middleName + " " + lastName);
	}, [
		firstName,
		middleName,
		lastName
	]);
	return (<div>
      <input value={lastName} onChange={(e) => setLastName(e.target.value)} />
      <div>{fullName}</div>
    </div>);
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ firstName: "John" }]
};
