crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__derived-state-from-prop-setter-call-outside-effect-no-error.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/derived-state-from-prop-setter-call-outside-effect-no-error.js
---
// @validateNoDerivedComputationsInEffects_exp @loggerTestOnly @outputMode:"lint"
import { useEffect, useState } from "react";
function Component({ initialName }) {
	const [name, setName] = useState("");
	useEffect(() => {
		setName(initialName);
	}, [initialName]);
	return (<div>
      <input value={name} onChange={(e) => setName(e.target.value)} />
    </div>);
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ initialName: "John" }]
};
