crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__derived-state-from-prop-setter-used-outside-effect-no-error.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/derived-state-from-prop-setter-used-outside-effect-no-error.js
---
No changes.
