crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__derived-state-from-ref-and-state-no-error.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/derived-state-from-ref-and-state-no-error.js
---
// @validateNoDerivedComputationsInEffects_exp @loggerTestOnly @outputMode:"lint"
import { useEffect, useState, useRef } from "react";
export default function Component({ test }) {
	const [local, setLocal] = useState("");
	const myRef = useRef(null);
	useEffect(() => {
		setLocal(myRef.current + test);
	}, [test]);
	return <>{local}</>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ test: "testString" }]
};
