crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__effect-contains-local-function-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/effect-contains-local-function-call.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectDerivationsOfState: You might not need an effect. Derive values in render, not effects.", labels: [LabeledSpan { label: Some("This should be computed during render, not in an effect"), span: Span { start: 298, end: 306 }, primary: false }], help: Some("Using an effect triggers an additional render which can hurt performance and user experience, potentially briefly showing stale values to the user\n\nThis setState call is setting a derived value that depends on the following reactive sources:\n\nProps: [propValue]\n\nData Flow Tree:\n└── propValue (Prop)\n\nSee: https://react.dev/learn/you-might-not-need-an-effect#updating-state-based-on-props-or-state"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @validateNoDerivedComputationsInEffects_exp @loggerTestOnly @outputMode:"lint"
import { useEffect, useState } from "react";
function Component({ propValue }) {
	const [value, setValue] = useState(null);
	function localFunction() {
		console.log("local function");
	}
	useEffect(() => {
		setValue(propValue);
		localFunction();
	}, [propValue]);
	return <div>{value}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ propValue: "test" }]
};
