crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__effect-contains-prop-function-call-no-error.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/effect-contains-prop-function-call-no-error.js
---
No changes.
