crates/oxc_react_compiler/tests/snapshots/effect-derived-computations__effect-used-in-dep-array-still-errors.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/effect-derived-computations/effect-used-in-dep-array-still-errors.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectDerivationsOfState: You might not need an effect. Derive values in render, not effects.", labels: [LabeledSpan { label: Some("This should be computed during render, not in an effect"), span: Span { start: 169, end: 173 }, primary: false }], help: Some("Using an effect triggers an additional render which can hurt performance and user experience, potentially briefly showing stale values to the user\n\nThis setState call is setting a derived value that depends on the following reactive sources:\n\nProps: [prop]\n\nData Flow Tree:\n└── prop (Prop)\n\nSee: https://react.dev/learn/you-might-not-need-an-effect#updating-state-based-on-props-or-state"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @validateNoDerivedComputationsInEffects_exp @loggerTestOnly @outputMode:"lint"
function Component({ prop }) {
	const [s, setS] = useState(0);
	useEffect(() => {
		setS(prop);
	}, [prop, setS]);
	return <div>{prop}</div>;
}
